-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8213042 | 11.0.2 | Muthusamy Chinnathambi | P4 | Resolved | Fixed | b02 |
| JDK-8247800 | openjdk8u272 | Unassigned | P4 | Resolved | Fixed | b01 |
The hotspot source code doesn't display the correct MSVC++ version when
compiled by the following versions of VS2017:
MSVC++ 14.11 _MSC_VER == 1911 (Visual Studio 2017 version 15.3)
MSVC++ 14.14 _MSC_VER == 1914 (Visual Studio 2017 version 15.7)
MSVC++ 14.15 _MSC_VER == 1915 (Visual Studio 2017 version 15.8)
For ex., if the JDK is compiled with VS2017 15.7, it returns "unknown MSVC++: 1914" when run with -Xinternalversion.
compiled by the following versions of VS2017:
MSVC++ 14.11 _MSC_VER == 1911 (Visual Studio 2017 version 15.3)
MSVC++ 14.14 _MSC_VER == 1914 (Visual Studio 2017 version 15.7)
MSVC++ 14.15 _MSC_VER == 1915 (Visual Studio 2017 version 15.8)
For ex., if the JDK is compiled with VS2017 15.7, it returns "unknown MSVC++: 1914" when run with -Xinternalversion.
- backported by
-
JDK-8213042 Need to update vm_version.cpp to recognise VS2017 minor versions
-
- Resolved
-
-
JDK-8247800 Need to update vm_version.cpp to recognise VS2017 minor versions
-
- Resolved
-