8211714: Need to update vm_version.cpp to recognise VS2017 minor versions

Reviewed-by: dholmes